setup basic routes and complete docs
